Callfire API client Changelog
=============================
Version 1.7.6 - May 24 2016
    - synchronized client with last api version

Version 1.7.5 - Apr 8 2016
    - removed get/update batches from TextBroadcastsApi

Version 1.7.4 - Mar 14 2016
    - fixed uploading mp3 issue

Version 1.7.3 - Feb 25 2016
    - added proxy with basic authorization support, see out docs how to configure it

Version 1.7.2 - Jan 27 2016
    - added find by batchId parameter to FindCalls & FindTexts requests.
    - fixed NumberApi.findNumbersLocal and NumberApi.findNumbersTollfree methods to accept an updated server responses

Version 1.7.1 - Dec 31 2015
    - added Subscriptions API back because Webhooks feature currently in beta
    - IvrBroadcast and related classes are now deprecated, use CallBroadcast instead
    - bugfixes

Version 1.7.0 - Dec 15 2015
    - added CallBroadcastsApi which replaced VoiceBroadcastsApi, in future it will be merged with IVR broadcasts API.
    - deprecated VoiceBroadcastsApi and VoiceBroadcast classes, use CallBroadcast instead
    - added API to fetch text/call broadcast statistics
    - added MediaApi class for accessing /media endpoint

Version 1.6.0 - Nov 25 2015
    - updated Webhook object, added validation of events

Version 1.5.0 - Oct 28 2015
    - added support of schedules for all campaigns
    - added 'recordings' property to CallRecord object, so now you can fetch recordings metadata for particular call
    - improvements in exception handling, now different HTTP response error codes produce different API exceptions
       -- 400 - throws BadRequestException
       -- 401 - throws UnauthorizedException
       -- 403 - throws AccessForbiddenException
       -- 404 - throws ResourceNotFoundException
       -- 500 - throws InternalServerErrorException
       -- other error codes throw CallfireApiException

-----------------------------

Version 1.4.0 - Oct 19 2015
    - removed deprecated subscriptions api

-----------------------------
